# atlas-sight

./: README.md  pyproject.toml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/dev/atlascortex/sight/: MainActivity.kt  SightApplication.kt
android/app/src/main/kotlin/dev/atlascortex/sight/core/: AudioCues.kt  CommandParser.kt  Config.kt  ContextTracker.kt  ModeManager.kt  Models.kt  ObstacleWarner.kt  OrientationHelper.kt  SightEngine.kt
android/app/src/main/kotlin/dev/atlascortex/sight/core/modes/: ExploreMode.kt  IdentifyMode.kt  NavigateMode.kt  ReadMode.kt
android/app/src/main/kotlin/dev/atlascortex/sight/platform/: CameraManager.kt  GestureHandler.kt  HapticEngine.kt  Permissions.kt  SpeechRecognizer.kt  SpeechSynthesizer.kt  VisionModel.kt  WakeWordDetector.kt
android/app/src/main/kotlin/dev/atlascortex/sight/ui/: SightScreen.kt
android/app/src/main/kotlin/dev/atlascortex/sight/ui/theme/: Color.kt  Theme.kt
android/app/src/main/kotlin/dev/atlascortex/sight/util/: ModelDownloader.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/lib/: build.gradle.kts  consumer-rules.pro
android/lib/src/main/cpp/: CMakeLists.txt  logging.h  vision_chat.cpp
android/lib/src/main/java/dev/atlascortex/sight/vlm/: VisionInferenceEngine.kt
atlas_sight/: __init__.py  config.py
atlas_sight/core/: __init__.py  context.py  engine.py  scene.py
atlas_sight/data/: __init__.py  history.py  models.py
atlas_sight/interaction/: __init__.py  audio_cues.py  gestures.py  haptics.py
atlas_sight/modes/: __init__.py  base.py  emergency.py  explore.py  identify.py  navigate.py  read.py
atlas_sight/navigation/: __init__.py  obstacle.py  orientation.py
atlas_sight/vision/: __init__.py  camera.py  detector.py  ocr.py  vlm.py
atlas_sight/voice/: __init__.py  commands.py  listener.py  speaker.py
demo/: README.md  index.html  server.py  setup-pixel.sh  start-offline.sh  start.sh  termux-setup.sh
demo/android/: AtlasSightActivity.kt  README.md  build-instructions.md  sight_layout.xml
docs/: NATIVE_APP_PLAN.md
tests/: __init__.py  test_audio_cues.py  test_commands.py  test_config.py  test_context.py  test_engine.py  test_gestures.py  test_haptics.py  test_history.py  test_models.py  test_modes.py  test_navigation.py  test_vision.py  test_voice.py
